<resources>
    <string name="app_name">TripCalculator</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_trip_found_pleae_add_trip_using_plus_button">No Trip Found Please Add Trip \n Using Plus Button !!</string>
    <string name="enter_trip_details">Enter Trip Details</string>
    <string name="hint_name">Name</string>
    <string name="email">Email</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="common_expenditure">Common Expenditure</string>
    <string name="add">Add</string>
    <string name="generate_report">Generate Report</string>
    <string name="trip_location">Trip Location</string>
    <string name="trip_description">Trip Description</string>
    <string name="common_expeniture">Common Expeniture</string>
    <string name="total_expenditure">Total Expenditure</string>
    <string name="trip_report">Trip Report</string>
    <string name="member_report">Member Report</string>
    <string name="initialpay">InitialPay</string>
    <string name="invalid_trip_id">Invalid Trip Id</string>
    <string name="trip_details">Trip Details</string>
    <string name="member_details">Member Details</string>
    <string name="no_member_found_n_please_add_members_by_tapping_plus_button">No member found. Please add members by tapping plus button</string>
    <string name="member_list">Member List</string>
    <string name="enter_member_details">Enter Member Details</string>
    <string name="initial_payment">Initial Payment</string>
    <string name="member_expenditure_list">Member Expenditure List</string>
    <string name="amount">Amount</string>
    <string name="member_name">Member Name</string>
    <string name="member_email">Member Email</string>
    <string name="member_phone_number">Member Phone Number</string>
    <string name="member_initial_pay">Member Initial Pay</string>
    <string name="trip_title">Trip Title</string>
    <string name="invalid_name">Invalid name</string>
    <string name="invalid_location">Invalid location</string>
    <string name="invalid_desc">Invalid Description</string>
    <string name="invlaid_exp">Invalid Expenditure</string>
    <string name="validation_su">Validation Success</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_phone">Invalid PhoneNumber</string>
    <string name="invalid_contir">Invlid InitialContribution</string>
    <string name="trip_list">Trips</string>
    <string name="invalid_amount">Invalid Amount</string>
    <string name="no_expenditure_found_please_tap_plus_button_to_add_expenditures">No Expenditure Found, Please Tap Plus Button to Add Expenditures!!</string>
    <string name="proceed">Proceed</string>
    <string name="do_you_want_to_update_common_expediture_optional">Do You Want to Update Common Expediture(Optional)?</string>
</resources>
