<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:elevation="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/trip_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10dp"
            android:text="@string/enter_trip_details"
            android:textColor="@android:color/black"
            android:textSize="@dimen/header_text"
            android:textStyle="bold">
        </TextView>


            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:inputType="text" />

            <EditText
                android:layout_marginTop="@dimen/margin_20dp"
                android:id="@+id/input_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location"
                android:inputType="text" />

            <EditText
                android:layout_marginTop="@dimen/margin_20dp"
                android:id="@+id/input_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:inputType="text" />

            <EditText
                android:layout_marginTop="@dimen/margin_20dp"
                android:id="@+id/input_expenditure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/common_expenditure"
                android:inputType="numberDecimal" />
        <RelativeLayout
            android:id="@+id/addTripButton"
            android:background="@drawable/rounded_bg"
            android:layout_margin="@dimen/margin_20dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="@dimen/width_100dp"
            android:layout_height="wrap_content">
            <TextView
               android:layout_centerHorizontal="true"
                android:paddingLeft="@dimen/margin_10dp"
                android:paddingRight="@dimen/margin_10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_margin="@dimen/padding_5dp"
            android:text="@string/add"
            android:textColor="@android:color/white"
            android:textSize="@dimen/header_text"
            android:textStyle="bold">
        </TextView>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>