<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.MemberDetailsInputFormFragmet">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10dp"
                android:text="@string/enter_member_details"
                android:textColor="@android:color/black"
                android:textSize="@dimen/header_text"
                android:textStyle="bold">
            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:layout_marginRight="@dimen/margin_10dp"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:inputType="text" />

                <EditText
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:id="@+id/input_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Phone Number"
                    android:inputType="phone" />

                <EditText
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:id="@+id/input_initial_pay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/initial_payment"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/addTripMember"
                android:layout_width="@dimen/width_100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin_20dp"
                android:background="@drawable/rounded_bg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/padding_5dp"
                    android:paddingLeft="@dimen/margin_10dp"

                    android:paddingRight="@dimen/margin_10dp"
                    android:text="@string/add"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/button_text_16dp"
                    android:textStyle="bold"></TextView>
            </RelativeLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</RelativeLayout>