<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    tools:context=".view.activity.ReportActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_10dp"
                    android:text="@string/trip_details"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/header_text"
                    android:textStyle="bold">
                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_10dp"
                    android:background="@drawable/rounded_bg"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_10dp"
                            android:layout_weight="4"
                            android:text="@string/member_name"
                            android:textColor="@color/white"
                            android:textSize="@dimen/info_label"
                            android:textStyle="bold"></TextView>

                        <TextView
                            android:id="@+id/memberName"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_10dp"
                            android:layout_weight="6"
                            android:gravity="right"
                            android:textColor="@color/white"
                            android:textSize="@dimen/info_label"
                            android:textStyle="bold"></TextView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_10dp"
                            android:layout_weight="4"
                            android:text="@string/member_email"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/info_label"
                            android:textStyle="bold"></TextView>

                        <TextView
                            android:id="@+id/memberEmail"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_10dp"
                            android:layout_weight="6"
                            android:gravity="right"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/info_label"
                            android:textStyle="bold"></TextView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_10dp"
                            android:layout_weight="4"
                            android:text="@string/member_phone_number"
                            android:textColor="@color/white"
                            android:textSize="@dimen/info_label"
                            android:textStyle="bold"></TextView>

                        <TextView
                            android:id="@+id/memberPhone"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_10dp"
                            android:layout_weight="6"
                            android:gravity="right"
                            android:textColor="@color/white"
                            android:textSize="@dimen/info_label"
                            android:textStyle="bold"></TextView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_10dp"
                            android:layout_weight="4"
                            android:text="@string/member_initial_pay"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/info_label"
                            android:textStyle="bold"></TextView>

                        <TextView
                            android:id="@+id/memberInitialPay"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_10dp"
                            android:layout_weight="6"
                            android:gravity="right"

                            android:textColor="@android:color/black"
                            android:textSize="@dimen/info_label"
                            android:textStyle="bold"></TextView>

                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_10dp"
                    android:text="@string/member_expenditure_list"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/header_text"
                    android:textStyle="bold">

                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/margin_10dp"
                    android:elevation="@dimen/margin_10dp">
                    <include
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        layout="@layout/layout_member_expenditure_list_item_dark" />
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/memberDetailRv"
                            android:layout_width="match_parent"
                            android:nestedScrollingEnabled="false"
                            android:layout_height="wrap_content">
                        </androidx.recyclerview.widget.RecyclerView>

                        <TextView
                            android:visibility="gone"
                            android:id="@+id/no_member_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="@dimen/alert_text_size"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:text="@string/no_member_found_n_please_add_members_by_tapping_plus_button">

                        </TextView>
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_expenditure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@drawable/icn_plus" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>